...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Iqc-vL-PQf" secondAttribute="trailing" id="4YQ-Hd-mQs"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Iqc-vL-PQf" secondAttribute="bottom" id="AjZ-zK-Jye"/>
                            <constraint firstItem="Iqc-vL-PQf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mgy-yC-fh4"/>
                            <constraint firstItem="Iqc-vL-PQf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="w7z-el-gFZ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Tasks" id="Aa3-os-7kZ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4Xo-2G-8rb">
                            <connections>
                                <action selector="addNewTask:" destination="BYZ-38-t0r" id="mcN-DD-pQU"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7fI-UF-ulk">
                                        <rect key="frame" x="300" y="0.0" width="74" height="32"/>
                                        <color key="backgroundColor" systemColor="linkColor"/>
                                        <color key="tintColor" systemColor="systemBackgroundColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Save">
                                            <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="save" destination="0ag-BL-U72" eventType="touchUpInside" id="gAF-b5-ut2"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="g1R-WZ-Kcx">
                                <rect key="frame" x="20" y="129" width="374" height="222"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CJn-Lo-LIJ">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4YY-QL-GYG">
                                        <rect key="frame" x="0.0" y="47" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="och-cu-6Wm">
                                        <rect key="frame" x="0.0" y="94" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yOu-rb-1a1">
                                        <rect key="frame" x="0.0" y="141" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gw3-r2-Olu">
                                        <rect key="frame" x="0.0" y="188" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
...
